# R-Type

./: .gitignore  CMakeLists.txt  Makefile  PULL_REQUEST.md  README.md  README_FR.md  demo.sh  launch_clients.sh  rtype_doc_text.txt  test_headless_client.cpp
Serveur/: CMakeLists.txt  Makefile  README.md  demo.sh  test_headless_client.cpp
Serveur/doc/: ARCHITECTURE.md  BUILD.md  CONNEXION_PROTOCOL.md  PROTOCOL.md
Serveur/include/: Components.hpp  Entity.hpp  GameServer.hpp  OptionalRef.hpp  PackedArray.hpp  Protocol.hpp  Registry.hpp  Server.hpp  SparseArray.hpp  Systems.hpp  Zipper.hpp
Serveur/src/: GameClient.cpp  GameServer.cpp  NetworkECS.cpp  Server.cpp  interactive_client.cpp  main.cpp  render_client.cpp
_codeql_build_dir/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile
cmake/: FindAsio.cmake  FindRaylib.cmake
doc/: BUILD.md  CMAKE_BUILD.md  CMAKE_QUICK_START.md  CONNEXION_PROTOCOL.md  ENEMY_SYSTEM.md  README_ECS_FR.md  README_old.md  TCP_UDP_ARCHITECTURE.md  TROUBLESHOOTING.md  WINDOWS_BUILD.md  WINDOWS_CMAKE_GUIDE.md
include/: Components.hpp  GameClient.hpp  GameServer.hpp  HybridArray.hpp  NetworkECS.hpp  Protocol.hpp  Registry.hpp  Server.hpp
scripts/: bootstrap-deps.ps1  bootstrap-deps.sh
src/: CMakeLists.txt  GameClient.cpp  GameServer.cpp  Protocol.cpp  Server.cpp  client_test.cpp  interactive_client.cpp  main.cpp  render_client.cpp
src/client/: CMakeLists.txt  ClientMain.cpp
src/game/: CMakeLists.txt  Game.cpp  Game.hpp
tests/: test_server_client.sh
tools/: make_dist.sh
